The render status feedback (progress bar) does not take into account specific Renderlayer samples #34877

Closed
opened 2013-04-05 06:50:57 +02:00 by Jeroen Bakker · 4 comments
Member

%%%--- Operating System, Graphics card ---
Linux, Ubuntu64

- Blender version with error, and version that worked ---

Blender 2.66a and trunk (4 April 2013)

- Short description of error ---

The render status feedback (progress bar) does not take into account the scene.render.renderlayer.samples, it only uses the number of samples as configured in the scene.render.samples

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Best way too see this is to change the scene.render.samples to 1 and scene.render.renderlayer.samples to 50.
Use cycles renderer. and start rendering.
the progress bar is fully filled (at 100%) after just a few tiles%%%

%%%--- Operating System, Graphics card --- Linux, Ubuntu64 - Blender version with error, and version that worked --- Blender 2.66a and trunk (4 April 2013) - Short description of error --- The render status feedback (progress bar) does not take into account the scene.render.renderlayer.samples, it only uses the number of samples as configured in the scene.render.samples - Steps for others to reproduce the error (preferably based on attached .blend file) --- Best way too see this is to change the scene.render.samples to 1 and scene.render.renderlayer.samples to 50. Use cycles renderer. and start rendering. the progress bar is fully filled (at 100%) after just a few tiles%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%I was changing that code, so guess that's me who shall be balmed.%%%

%%%I was changing that code, so guess that's me who shall be balmed.%%%

%%%Noticed the progress bar wasn't working at all on retina macbook, and just fixed this as well now, thanks for the report, closing.%%%

%%%Noticed the progress bar wasn't working at all on retina macbook, and just fixed this as well now, thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34877
No description provided.