Fix #34877: The render status feedback (progress bar) does not take into account specific Renderlayer samples